<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/player_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_orange"
    android:gravity="center"
    android:orientation="vertical">

...
        android:textColor="@color/color_white"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="@dimen/large_font" />

    <Button
        android:id="@+id/cryptograms_to_solve_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_button_height"
        android:background="@drawable/button_background"
        android:layout_marginVertical="@dimen/vertical_padding"
        android:layout_marginHorizontal="@dimen/horizontal_padding"
        android:text="@string/cryptograms_to_solve"
...
